--- a/src/css/style.css
+++ b/src/css/style.css
@@ -86,13 +86,13 @@ ul#menu a {
     width: 100%;
 }
 
-#register, #login {
+#register {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-#register > div#register-form, #login > div#login-form  {
+#register > div#register-form {
     padding: 10px;
     flex: 0 0 500px;
 }
@@ -265,10 +265,21 @@ ul#menu a {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
-#blog-feed #blog-feed-list div.blog-feed-header a {
-    margin-bottom: 10px;
+#blog-feed #blog-feed-list div.blog-feed-header h3 {
+    margin-bottom: 15px;
 }
 
 #blog-feed #blog-feed-list div.blog-feed-header p {
-    margin: 0;
+    margin: 5px 0px 0px 0px;
+    font-size: 0.9rem;
+    color: #78909C;
+}
+
+#blog-feed #blog-feed-list div.blog-feed-body {
+    border-top: 1px solid #BFBFBF;
+    margin-top: 10px;
+}
+
+#blog-feed #blog-feed-list div.blog-feed-header p.blog-feed-author {
+  font-style: italic;
 }
